[package]
name = "desafio30k"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.0.0" }

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[source.crates-io]
replace-with = "alternative"

[source.alternative]
registry = "https://github.com/rust-lang/crates.io-index"

